# configure.ac --
#

AC_INIT([nausicaa-ossp-sa],[0.1d0])
NAUSICAA_BEGIN
NAUSICAA_SCHEME_CHECK_LIBRARY([URIEL_FFI],[(uriel ffi)])
NAUSICAA_SYSTEM_SETUP
NAUSICAA_C_LANGUAGE
NAUSICAA_SIZEOF
AC_CONFIG_FILES([../libraries/ossp-sa/sizeof.sls:libraries/ossp-sa/sizeof.sls.in])
NAUSICAA_END


### end of file
